# controllers/ops/health/health.go
@@ -7,15 +7,16 @@ import (
 	"app/constants"
 	"app/pkg/jwt"
 	"fmt"
+	"github.com/ergoapi/errors"
+	"github.com/ergoapi/exgin"
+	"github.com/ergoapi/zlog"
 	"github.com/gin-gonic/gin"
-	"github.com/ysicing/ext/exgin"
-	"github.com/ysicing/ext/gerr"
-	"github.com/ysicing/ext/logger/zlog"
 )
 
-// @Summary health
+// Health
+//  @Summary health
 // @version 0.0.1
-// @Accept application/json
+// @Accept pplication/json
 // @Tags 默认
 // @Success 200
 // @Router /health [get]
@@ -23,6 +24,7 @@ func Health(c *gin.Context) {
 	exgin.GinsData(c, "I am ok.", nil)
 }
 
+// RVersion
 // @Summary version
 // @version 0.0.1
 // @Accept application/json
@@ -37,6 +39,7 @@ func RVersion(c *gin.Context) {
 	}, nil)
 }
 
+// Err500
 // @Summary errpage
 // @version 0.0.1
 // @Accept application/json
@@ -45,9 +48,10 @@ func RVersion(c *gin.Context) {
 // @Router /err500 [get]
 func Err500(c *gin.Context) {
 	zlog.Error("too long err")
-	gerr.Bomb("500 Err by Gins!")
+	errors.Bomb("500 Err by Gins!")
 }
 
+// ErrPanic
 // @Summary errpanic
 // @version 0.0.1
 // @Accept application/json
@@ -56,7 +60,7 @@ func Err500(c *gin.Context) {
 // @Router /errpanic [get]
 func ErrPanic(c *gin.Context) {
 	panic("panic_err")
-	gerr.Bomb("Test panic err by Gins!")
+	// errors.Bomb("Test panic err by Gins!")
 }
 
 type User struct {
@@ -64,6 +68,7 @@ type User struct {
 	UserRole string `json:"userrole" form:"userrole"`
 }
 
+// GenToken
 // @Summary 生成测试Token
 // @version 0.0.1
 // @Tags 默认
