# docs/swagger.json
@@ -12,7 +12,7 @@
             "name": "MIT",
             "url": "https://opensource.org/licenses/MIT"
         },
-        "version": "0.0.2"
+        "version": "0.0.3"
     },
     "paths": {
         "/apis/example.dev/v1beta/db/total": {
@@ -39,7 +39,9 @@
                     }
                 ],
                 "responses": {
-                    "200": {}
+                    "200": {
+                        "description": ""
+                    }
                 }
             }
         },
@@ -53,7 +55,9 @@
                 ],
                 "summary": "errpage",
                 "responses": {
-                    "500": {}
+                    "500": {
+                        "description": ""
+                    }
                 }
             }
         },
@@ -67,7 +71,9 @@
                 ],
                 "summary": "errpanic",
                 "responses": {
-                    "500": {}
+                    "500": {
+                        "description": ""
+                    }
                 }
             }
         },
@@ -92,21 +98,25 @@
                     }
                 ],
                 "responses": {
-                    "200": {}
+                    "200": {
+                        "description": ""
+                    }
                 }
             }
         },
         "/health": {
             "get": {
                 "consumes": [
-                    "application/json"
+                    "pplication/json"
                 ],
                 "tags": [
                     "默认"
                 ],
                 "summary": "health",
                 "responses": {
-                    "200": {}
+                    "200": {
+                        "description": ""
+                    }
                 }
             }
         },
@@ -120,7 +130,9 @@
                 ],
                 "summary": "version",
                 "responses": {
-                    "200": {}
+                    "200": {
+                        "description": ""
+                    }
                 }
             }
         }
